...
    <string name="archive">Archive</string>
    <string name="body_weight">Body Weight</string>
    <string name="button_add_food">Add Food</string>
    <string name="button_add_ingredient">Add Ingredient</string>
    <string name="button_add_to_day">Add to Day</string>
    <string name="button_back">Back</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_clear_input">Clear Input</string>

    <string name="button_continue">Continue</string>
    <string name="button_finish">Finish</string>
    <string name="button_create">Create</string>
    <string name="button_create_entry_manually">Create Archive Entry Manually</string>
...
